packages/compiler/tests/fixtures/invalid/inline-handler.svelte
<script>
  let count = 0;
</script>
<text on:select={() => count++} focusable>{count}</text>
